# oddsjam-ev-filters

./: .gitignore  README.md  pyproject.toml
configs/: annual_pnl_export.yaml  preprocess.yaml
data/: README.md
docs/: RESEARCH_PLAN.md
notebooks/: 01_eda_oddsjam.ipynb  01_qa_initial_eda.ipynb  01_raw_preprocessing_and_eda.ipynb
scripts/: export_annual_pnl.py  preprocess_bet_tracker.py
src/oddsjam_ev/: dedupe.py  liquidity.py  qa.py  utils.py
src/oddsjam_ev/io/: load.py
src/oddsjam_ev/metrics/: odds.py  preprocess.py
src/oddsjam_ev/plotting/: __init__.py  common.py  ev.py  filters.py  timeseries.py
tests/: test_smoke.py
