[project]
name = "oddsjam-ev-filters"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2,<2.3)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.5.2,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "black (>=26.1.0,<27.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
